Publishing events to kafka

--- a/shopping-analytics-service/src/main/resources/local-shared.conf
+++ b/shopping-analytics-service/src/main/resources/local-shared.conf
@@ -1,4 +1,5 @@
 shopping-analytics-service.grpc.interface = "127.0.0.1"
+shopping-analytics-service.kafka.bootstrap-servers = "localhost:9092"
 akka.remote.artery.canonical.hostname = "127.0.0.1"
 akka.management.http.hostname = "127.0.0.1"
 
