--- a/shopping-cart-service/pom.xml
+++ b/shopping-cart-service/pom.xml
@@ -174,6 +174,7 @@
     </dependencies>
 
     <build>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
