--- a/shopping-cart-service/src/main/resources/local-shared.conf
+++ b/shopping-cart-service/src/main/resources/local-shared.conf
@@ -1,6 +1,8 @@
 shopping-cart-service.grpc.interface = "127.0.0.1"
 akka.remote.artery.canonical.hostname = "127.0.0.1"
 akka.management.http.hostname = "127.0.0.1"
+shopping-order-service.host = "localhost"
+shopping-order-service.port = 8301
 
 akka.management.cluster.bootstrap.contact-point-discovery {
   service-name = "shopping-cart-service"
